- fix issue with parsing lyrics for few songs with credits - remove logo gap

--- a/src/global.css
+++ b/src/global.css
@@ -229,7 +229,6 @@
 .yf-logo-container {
 	display: flex;
 	align-items: center;
-	gap: 8px;
 }
 
 .yf-logo-svg {
